# learnopengl

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: shader_program.hpp
src/: main.cpp
